@@ -92,6 +92,8 @@ Release ...
 * pax: The '-n' option in read mode does not mark a pattern as used if it
   matched an archive entry but that entry was not selected due to '-u'.
 * pax: If link() fails, no separate copy of an archive entry is created.
+* pax: When a socket is encountered, print an error message and exit with
+  failure.
 * find: Symbolic modes for -perm that include the sgid bit now work properly.
 * cp: The -f option does not disable the -i option in the POSIX personality
   and vice-versa.
